# python-project-template

./: .bandit.yml  .coveragerc  .pre-commit-config.yaml  .pylintrc  .spelling  404.html  AUTHORS.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: docs.yml  lint.yml  pypi-publish.yml  test.yml
python_project_template/: __init__.py
scripts/: check_copyright.py  spell-check.sh  update-deps.py
search/: search_index.json
tests/: __init__.py  test_main.py
